third_party/move/move-compiler/transactional-tests/tests/inlining/lambda_lifted.exp
processed 4 tasks

task 0 'publish'. lines 1-36:
Error: error[E07005]: invalid transfer of references
   ┌─ TEMPFILE:30:13
   │
29 │         lifted_lambda(&mut a,
   │                       ------ It is still being mutably borrowed by this reference
30 │             lifted_lambda(&mut a, z))
   │             ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid usage of reference as function argument. Cannot transfer a mutable reference that is being borrowed



task 1 'run'. lines 38-38:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 2 'run'. lines 40-40:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 3 'run'. lines 42-42:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
